@@ -35,8 +35,8 @@
 krb5_boolean
 krb5_address_compare(context, addr1, addr2)
     krb5_context context;
-    const krb5_address *addr1;
-    const krb5_address *addr2;
+    krb5_const krb5_address *addr1;
+    krb5_const krb5_address *addr2;
 {
     if (addr1->addrtype != addr2->addrtype)
 	return(FALSE);
