@@ -37,13 +37,13 @@
 
 KRB5_DLLIMP krb5_error_code KRB5_CALLCONV_C
 #ifdef HAVE_STDARG_H
-krb5_build_principal_ext(krb5_context context,  krb5_principal FAR * princ, int rlen, const char FAR * realm, ...)
+krb5_build_principal_ext(krb5_context context,  krb5_principal FAR * princ, int rlen, krb5_const char FAR * realm, ...)
 #else
 krb5_build_principal_ext(context, princ, rlen, realm, va_alist)
     krb5_context context;
     krb5_principal FAR *princ;
     int rlen;
-    const char FAR *realm;
+    krb5_const char FAR *realm;
     va_dcl
 #endif
 {
