@@ -102,13 +102,13 @@ krb5_build_principal_va(context, princ, rlen, realm, ap)
 KRB5_DLLIMP krb5_error_code KRB5_CALLCONV_C
 #ifdef HAVE_STDARG_H
 krb5_build_principal(krb5_context context,  krb5_principal * princ, int rlen,
-    const char * realm, ...)
+    krb5_const char FAR * realm, ...)
 #else
 krb5_build_principal(context, princ, rlen, realm, va_alist)
     krb5_context context;
     krb5_principal *princ;
     int rlen;
-    const char *realm;
+    krb5_const char FAR *realm;
     va_dcl
 #endif
 {
