@@ -38,7 +38,7 @@
 krb5_error_code
 krb5_generate_seq_number(context, key, seqno)
     krb5_context context;
-    const krb5_keyblock *key;
+    krb5_const krb5_keyblock *key;
     krb5_int32 *seqno;
 {
     krb5_data seed;
